test/suite/snippet_allowlist.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
tests:
- name: snippet_allowlist
  template: ../../resources/constraint_templates/snippet_allowlist.yaml
  constraint: ../../resources/constraints/snippet_allowlist.yaml
  cases:
  - name: allow-valid-auth-snippet
    object: samples/snippet_allowlist/allow_valid_auth_snippet/case.yaml
    assertions:
    - violations: no
  - name: allow-valid-configuration-snippet
    object: samples/snippet_allowlist/allow_valid_configuration_snippet/case.yaml
    assertions:
    - violations: no
  - name: allow-valid-server-snippet
    object: samples/snippet_allowlist/allow_valid_server_snippet/case.yaml
    assertions:
    - violations: no
  - name: allow-valid-modsec-snippet
    object: samples/snippet_allowlist/allow_valid_modsec_snippet/case.yaml
    assertions:
    - violations: no
  - name: deny-forbidden-auth-snippet
    object: samples/snippet_allowlist/deny_forbidden_auth_snippet/case.yaml
    assertions:
    - violations: yes
  - name: deny-forbidden-configuration-snippet
    object: samples/snippet_allowlist/deny_forbidden_configuration_snippet/case.yaml
    assertions:
    - violations: yes
  - name: deny-forbidden-server-snippet
    object: samples/snippet_allowlist/deny_forbidden_server_snippet/case.yaml
    assertions:
    - violations: yes
  - name: deny-forbidden-modsec-snippet
    object: samples/snippet_allowlist/deny_forbidden_modsec_snippet/case.yaml
    assertions:
    - violations: yes
